--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,8 @@ body {
   align-items: center;
   height: 100%;
 }
+
+.blog-preview-card {
+  width: 200px;
+  background-color: hsl(0, 0%, 100%);
+}
