--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,9 @@ body {
   padding: 24px;
   box-shadow: 8px 8px 0 #000;
 }
+
+.images-window img {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+}
