--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,11 @@ body {
   background-color: hsl(0, 0%, 100%);
   border: 1px solid #111;
   border-radius: 20px;
-  padding: 24px;
+  padding: 1.5rem;
   box-shadow: 8px 8px 0 #000;
   transition: all 0.4s ease;
+  margin: 0 20px;
+  display: flex;
 }
 
 .wrapper {
@@ -35,7 +37,7 @@ body {
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 .images-window img {
@@ -57,7 +59,7 @@ body {
   padding: 4px 12px;
   border-radius: 4px;
   font-size: 0.875rem;
-  font-weight: 900;
+  font-weight: 800;
   color: #111;
 }
 
@@ -68,7 +70,7 @@ body {
 
 .text-window p:nth-of-type(1) {
   font-size: 0.875rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .text-window h2 {
@@ -96,7 +98,7 @@ body {
 }
 
 .author-window img {
-  width: 32;
+  width: 32px;
   height: 32px;
 }
 
@@ -104,4 +106,11 @@ body {
   color: #111;
   font-size: 0.875rem;
   font-weight: 800;
+}
+
+
+@media (max-width: 430px) {
+  .images-window img {
+    height: max-content;
+  }
 }
